--- a/Header.html
+++ b/Header.html
@@ -95,10 +95,10 @@
     </div>
 
     <div class="right box">
-      <div class="topic">Subscribe us</div>
+      <div class="topic">Subscribe Here</div>
       <form action="#">
         <input type="text" placeholder="Enter email address">
-        <input type="submit" name="" value="Send">
+        <input type="submit" name="" value="Submit">
         <div class="media-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
