--- a/sidenav.html
+++ b/sidenav.html
@@ -57,28 +57,28 @@
       <div class="row slider">
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture">
             <h5 class="card-title mt-3 mb-3"> Triangle Baazaar </h5>
             <p class="card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
             </div>
@@ -86,28 +86,28 @@
         <!-- repeat slider-->
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
             <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
             <p class="card-text">This is basically market advertisemnt</p> 
             </div>
@@ -131,30 +131,30 @@
 <div class="container mt-2">
    
    <div class="row">
-     <div class="col-md-3 col-sm-6">
+     <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="Photo of sunset">
+     <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture">
          <h5 class="card-title mt-3 mb-3"> Triangle Baazaar </h5>
          <p class="card-text">This is basically market advertisemnt</p> 
    </div>
      </div>
-     <div class="col-md-3 col-sm-6">
+     <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="Photo of sunset">
+     <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture">
          <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
          <p class="card-text">This is basically market advertisemnt</p> 
    </div>
      </div>
-     <div class="col-md-3 col-sm-6">
+     <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="Photo of sunset">
+     <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture">
          <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
          <p class="card-text">This is basically market advertisemnt</p> 
    </div>
      </div>
-     <div class="col-md-3 col-sm-6">
+     <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="Photo of sunset">
+     <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
          <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
          <p class="card-text">This is basically market advertisemnt</p> 
          </div>
