--- a/sidenav.html
+++ b/sidenav.html
@@ -57,59 +57,59 @@
       <div class="row slider">
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture">
-            <h5 class="card-title mt-3 mb-3"> Triangle Baazaar </h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+            <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+            <p class=" container card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+        <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+        <p class=" container card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+            <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+            <p class=" container card-text">This is basically market advertisemnt</p>
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+            <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+            <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <!-- repeat slider-->
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+        <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+        <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+        <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-            <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-            <p class="card-text">This is basically market advertisemnt</p> 
+        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+        <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         
@@ -134,29 +134,29 @@
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
      <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture">
-         <h5 class="card-title mt-3 mb-3"> Triangle Baazaar </h5>
-         <p class="card-text">This is basically market advertisemnt</p> 
+     <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+     <p class=" container card-text">This is basically market advertisemnt</p> 
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
      <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture">
-         <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-         <p class="card-text">This is basically market advertisemnt</p> 
+     <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+     <p class=" container card-text">This is basically market advertisemnt</p>
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
      <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture">
-         <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-         <p class="card-text">This is basically market advertisemnt</p> 
+     <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+     <p class=" container card-text">This is basically market advertisemnt</p>
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
      <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
-         <h5 class="card-title  mt-3 mb-3">Triangle Baazaar</h5>
-         <p class="card-text">This is basically market advertisemnt</p> 
+     <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
+     <p class=" container card-text">This is basically market advertisemnt</p>
          </div>
      </div>    
    </div>
