--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
         <!-- <a href="#" class="btn btn-dark text-white">Explore Market</a> -->
         <button type="button" class="btn btn-dark btn-lg btn-block" style="background-color: #343434; border: 1px solid white;">Explore Market</button>
       </div>  
-      <div class="row slider">
+<div class="row slider">
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+        <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;"> -->
             <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
             <p class=" container card-text">This is basically market advertisemnt</p> 
       </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+            <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;"> -->
         <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
         <p class=" container card-text">This is basically market advertisemnt</p> 
-      </div>
+         </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;">
+            <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.5;"> -->
             <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
             <p class=" container card-text">This is basically market advertisemnt</p>
-      </div>
+         </div>
         </div>
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-            <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+            <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;"> -->
             <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
             <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
@@ -86,35 +86,35 @@
         <!-- repeat slider-->
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;"> -->
         <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
         <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;"> -->
         <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
         <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;"> -->
         <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
         <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         <div class="col-md-12 col-sm-6">
           <div class="card card-block">
-        <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;">
+        <!-- <img src="images/Develstrabgimage.png" alt="picture" style="transform: rotateY(45deg); opacity: 0.4;"> -->
         <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
         <p class=" container card-text">This is basically market advertisemnt</p> 
             </div>
         </div>  
         
-      </div>
     </div>
+</div>
 
 <!-- top20 advertisement start-->
 <div class="container text-center mt-4 mb-3 " > 
@@ -133,28 +133,28 @@
    <div class="row">
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture">
+     <!-- <img src="https://static.pexels.com/photos/7096/people-woman-coffee-meeting.jpg" alt="picture"> -->
      <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
      <p class=" container card-text">This is basically market advertisemnt</p> 
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture">
+     <!-- <img src="https://static.pexels.com/photos/7357/startup-photos.jpg" alt="picture"> -->
      <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
      <p class=" container card-text">This is basically market advertisemnt</p>
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture">
+     <!-- <img src="https://static.pexels.com/photos/262550/pexels-photo-262550.jpeg" alt="picture"> -->
      <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
      <p class=" container card-text">This is basically market advertisemnt</p>
    </div>
      </div>
      <div class="col-md-3 col-sm-6 mb-3">
        <div class="card card-block">
-     <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture">
+     <!-- <img src="https://static.pexels.com/photos/326424/pexels-photo-326424.jpeg" alt="picture"> -->
      <h2 class=" container card-title mt-3 mb-3"> Triangle Baazaar </h2>
      <p class=" container card-text">This is basically market advertisemnt</p>
          </div>
@@ -217,6 +217,8 @@
         $('.slider').slick({
           dots: true,
           infinite: false,
+          autoplay:true,
+          autoplaySpeed:1000,
           speed: 300,
           slidesToShow: 4,
           slidesToScroll: 4,
@@ -241,7 +243,7 @@
               breakpoint: 480,
               settings: {
                 slidesToShow: 1,
-                slidesToScroll: 1
+                slidesToScroll:1
               }
             }
             // You can unslick at a given breakpoint now by adding:
