--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <br>
 <!--Main Code start-->
 
-<div class="container mt-2">
+<div class="container-fluid mt-2">
        <div class="text-center mt-4 mb-3 "> 
         <!-- <a href="#" class="btn btn-dark text-white">Explore Market</a> -->
         <button type="button" class="btn btn-dark btn-lg btn-block" style="background-color: #343434; border: 1px solid white;">Explore Market</button>
